--- a/portfolio-website-react/package.json
+++ b/portfolio-website-react/package.json
@@ -6,6 +6,7 @@
     "@emotion/styled": "^11.11.5",
     "@gsap/react": "^2.1.1",
     "@mui/icons-material": "^5.15.16",
+    "@mui/lab": "^5.0.0-alpha.170",
     "@mui/material": "^5.15.16",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
