--- a/portfolio-website-react/package.json
+++ b/portfolio-website-react/package.json
@@ -18,6 +18,7 @@
     "react-rotating-text": "^1.4.1",
     "react-router-dom": "^6.23.0",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.9.0",
     "swiper": "^11.1.3",
     "web-vitals": "^2.1.4"
   },
