--- a/portfolio-website-react/package.json
+++ b/portfolio-website-react/package.json
@@ -12,10 +12,12 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "framer-motion": "^11.2.6",
     "gsap": "^3.12.5",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.3.1",
+    "react-intersection-observer": "^9.10.2",
     "react-rotating-text": "^1.4.1",
     "react-router-dom": "^6.23.0",
     "react-scripts": "5.0.1",
